# deweb

./: LICENSE  README.md  pyproject.toml
DeWeb/: __init__.py  browser.py  test.py
