[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeWeb"
version = "1.0.3"
description = "Un piccolo parser per creare finestre con pagine web in Python"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "DomeniGeco" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6 >=6.0.0"
]

[project.urls]
Homepage = "https://github.com/DeMENIGECO/DeWeb"
